@@ -1,5 +1,8 @@
 qbs (1.3.1+dfsg-3) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Replace previous cleanup patch with a new patch that
+    disables the broken test.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 07 Oct 2014 12:05:14 +0400
 
